<resources>
    <string name="app_name">CalPAL</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="font_size">Font Size</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="username">Username</string>
    <string name="calpal_app">CalPAL</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="username2">Username</string>
    <string name="password2">Password</string>
    <string name="sign_up2">Sign Up</string>
    <string name="event_name">Event Name</string>
    <string name="event_time_e_g_10_00_am">Event Time (e.g., 13:00)</string>
    <string name="event_location">Event Location</string>
    <string name="save_event">Save Event</string>
    <string name="search_or_enter_group_name">Search or enter group name</string>
    <string name="home">Home</string>
    <string name="loading_next_event">Loading next event…</string>
    <string name="group">Group</string>
    <string name="make_group">Make Group</string>
    <string name="my_schedule">My Schedule</string>
    <string name="add_event">Add Event</string>
    <string name="remove_event">Remove Event</string>
    <string name="home1">Home</string>
    <string name="personal">Personal</string>
    <string name="group1">Group</string>
    <string name="settings1">Settings</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="logged_out">You have been logged out</string>
    <string name="account_deleted_message">Account for %1$s has been deleted</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="current_parameters">Current Parameters:</string>
    <string name="enter_min_time_in_ms">Enter min time in ms</string>
    <string name="enter_min_distance_in_meters">Enter min distance in meters</string>
    <string name="set_parameters">Set Parameters</string>
    <string name="gps_location">GPS Location:</string>
    <string name="address">Address:</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="sign_up1">Sign Up</string>
    <string name="first_name2">First Name</string>
    <string name="last_name2">Last Name</string>
    <string name="email2">Email</string>
    <string name="username3">Username</string>
    <string name="password3">Password</string>
    <string name="sign_up3">Sign Up</string>
    <string name="notes">Notes</string>
    <string name="notes1">Notes</string>
    <string name="home11">Home</string>
    <string name="personal1">Personal</string>
    <string name="settings11">Settings</string>
    <string name="notes11">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="enter_your_note">Enter your note</string>
    <string name="remove">Remove</string>
    <string name="location_sample_location">Location: Sample Location</string>
    <string name="time_10_00_am">Time: 10:00 AM</string>
    <string name="event_name1">Event Name</string>
    <string name="todo">TODO</string>
    <string name="my_events">My Events</string>
    <string name="my_notes">My Notes</string>
    <string name="event_date" />
    <string name="sample_note_content">Sample note content</string>
    <string name="_2024_chris_and_aimee">© 2024 Chris and Aimee</string>
</resources>