<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Title for Notes Page -->
        <TextView
            android:id="@+id/notesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_notes"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp" />

        <!-- Container for Event Cards -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:ignore="NestedScrolling">
            <LinearLayout
                android:id="@+id/event_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <!-- Add Note Button -->
        <Button
            android:id="@+id/add_note_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_note"
            android:layout_marginTop="16dp"
            android:textColor="#FFFFFF"
            android:backgroundTint="#1976D2"
            android:textSize="25sp"
            android:visibility="gone" />

        <!-- Title for Notes of the Selected Event -->
        <TextView
            android:id="@+id/notesSectionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <!-- List of Notes for the selected Event -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:ignore="NestedScrolling">
            <LinearLayout
                android:id="@+id/notesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>
</ScrollView>